# print-clear

./: README.md  pyproject.toml
print_clear/: __init__.py  print_clear.py
