[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "print_clear"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
license = {text = "GPL"}
description = "A tiny CLI used for quoting input lines"
urls = {Homepage = "https://github.com/zwimer/print_clear"}
requires-python = ">= 3.10"
dependencies = [
	"termcolor",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
print-clear = "print_clear.print_clear:cli"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
print_clear = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "print_clear.__version__"}

# Tools

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.vulture]
ignore_names = ["cli"]
paths = ["print_clear"]
